# llm_extractinator

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  CITATION.cff  Dockerfile  MANIFEST.in  README.md  build.sh  index.html  mkdocs.yml  pyproject.toml  requirements.txt  run.sh  setup.cfg  setup.py
.streamlit/: config.toml
citation/: index.html
cli/: index.html
cli-usage/: index.html
configuration/: index.html
contributing/: index.html
cpu-only/: index.html
data/: example_data.json  testdata2.json
data-structure/: index.html
data_extractor/: data_loader.py  main.py  ollama_server.py  output_parsers.py  prediction_task.py  predictor.py  tasks.json  utils.py
docker/: index.html
docs/: citation.md  cli-usage.md  cli.md  configuration.md  contributing.md  cpu-only.md  data-structure.md  docker.md  examples.md  gui.md  index.md  installation.md  manual-configuration.md  manual-running.md  output.md  parser.md  preparing-data.md  python.md  quickstart.md  running.md  settings-reference.md  studio.md  troubleshooting.md
examples/: index.html
gui/: index.html
installation/: index.html
llm_extractinator/: __init__.py  callbacks.py  data_loader.py  gui.py  launch_gui.py  launch_schema_builder.py  main.py  ollama_server.py  prediction_task.py  predictor.py  prompt_utils.py  schema_builder.py  theme.py  translator.py  utils.py  validator.py
manual-configuration/: index.html
manual-running/: index.html
output/: index.html
parser/: index.html
preparing-data/: index.html
python/: index.html
quickstart/: index.html
running/: index.html
search/: search_index.json
settings-reference/: index.html
studio/: index.html
tasks/: Task001_adhesion_clf.json  Task002_nodule_clf.json  Task003_kidney_clf.json  Task004_skin_case_selection_clf.json  Task005_recist_timeline_clf.json  Task006_pathology_tumor_origin_clf.json  Task007_nodule_diameter_presence_clf.json  Task008_pdac_size_presence_clf.json  Task009_pdac_diagnosis_clf.json  Task010_prostate_radiology_clf.json  Task011_prostate_pathology_clf.json  Task012_pathology_tissue_type_clf.json  Task013_pathology_tissue_origin_clf.json  Task014_textual_entailment_clf.json  Task015_colon_pathology_clf.json  Task016_recist_lesion_size_presence_clf.json  Task017_pdac_attributes_clf.json  Task018_osteoarthritis_clf.json  Task019_prostate_volume_reg.json  Task020_psa_reg.json  Task021_psad_reg.json  Task022_pdac_size_reg.json  Task103_Example_mednli.json  (+18 more)
(+41 files in other folders)
